--- a/genkires.css
+++ b/genkires.css
@@ -2,10 +2,8 @@
     /*スマホ用のcssを記述*/
 /*   top-botton   */
     #page-top {
-       display:none;
-    position: fixed;
-    z-index:10000;
-    bottom: 10px;
+         z-index: 10000000;
+        bottom: 10px!important;
   
 }
     .font-1{
